--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 					<div class="col-md-2"></div>
 					<div class="col-md-8 wow fadeIn" data-wow-delay="0.9s">
 						<h3>Simple and Elegant</h3>
-						<h1>Lavish</h1>
+						<h1>RanKing</h1>
 						<h2 class="rotate">DESIGNER &AMP; DEVELOPER, UI &AMP; UX SPECIALIST, PROJECT LEADER</h2>
-						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet. Dolore magna aliquam erat volutpat.</p>
+						<p>Best website developer with latest configuration to fit rigth in the fast growing online space. Make a request now!</p>
 						<a href="#work" class="btn btn-default smoothScroll wow fadeInUp" data-wow-delay="1s">Get started</a>
 					</div>
 					<div class="col-md-2"></div>
@@ -69,7 +69,7 @@
 							</div>
 							<div class="media-body">
 								<h3 class="media-heading">Responsive Mobile</h3>
-								<p>Lavish CSS Template is designed by templatemo. Download, edit and use this layout.</p>
+								<p>Mobile applications and softwares with some of the best technology in the industry. Make an app today.</p>
 							</div>
 						</div>
 					</div>
@@ -110,8 +110,8 @@
 					<div class="col-md-6 col-xs-11 wow fadeInLeft" data-wow-delay="0.9s">
 						<h2>ABOUT LAVISH</h2>
 						<h4>DESIGNER &AMP; DEVELOPER</h4>
-						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet. Dolore magna aliquam erat volutpat.</p>
-						<p>Dolore magna aliquam erat volutpat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet.</p>
+						<p>We are an online based workshop serving all your web development needs. Take a step towards the future with our best tools.</p>
+						<p>Our projects take less than 48 hours to publish. You get the best results or money back if we fail to meet your expectations. </p>
 					</div>
 					<div class="col-md-6 col-xs-11 wow fadeInRight" data-wow-delay="0.9s">
 						<span class="text-top">Web Design <small>95%</small></span>
@@ -148,7 +148,7 @@
 						<img src="images/portfolio-img1.jpg" class="img-responsive" alt="portfolio img">
 							<div class="portfolio-overlay">
 								<h4>Web Design</h4>
-								<h5>Author: Cindy</h5>
+								<h5>Author: Sir Franklin</h5>
 							</div>
 					</div>
 				</div>
@@ -157,7 +157,7 @@
 						<img src="images/portfolio-img2.jpg" class="img-responsive" alt="portfolio img">
 							<div class="portfolio-overlay">
 								<h4>Web App</h4>
-								<h5>Author: Linda</h5>
+								<h5>Author: Sir Frankline</h5>
 							</div>
 					</div>
 				</div>
@@ -166,7 +166,7 @@
 						<img src="images/portfolio-img3.jpg" class="img-responsive" alt="portfolio img">
 							<div class="portfolio-overlay">
 								<h4>Mobile App</h4>
-								<h5>Author: Kate</h5>
+								<h5>Author: RanKing</h5>
 							</div>
 					</div>
 				</div>
@@ -175,7 +175,7 @@
 						<img src="images/portfolio-img4.jpg" class="img-responsive" alt="portfolio img">
 							<div class="portfolio-overlay">
 								<h4>Old Artwork</h4>
-								<h5>Author: Catherine</h5>
+								<h5>Author: RanKing</h5>
 							</div>
 					</div>
 				</div>
@@ -184,7 +184,7 @@
 						<img src="images/portfolio-img5.jpg" class="img-responsive" alt="portfolio img">
 							<div class="portfolio-overlay">
 								<h4>New Animation</h4>
-								<h5>Author: Kathy</h5>
+								<h5>Author: Rrankyy</h5>
 							</div>
 					</div>
 				</div>
@@ -200,9 +200,9 @@
 					<div class="col-lg-5 col-lg-offset-1 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
 						<address>
 							<p class="contact-title">CONTACT ME</p>
-							<p><i class="fa fa-phone"></i> 090-080-0760</p>
-							<p><i class="fa fa-envelope-o"></i> info@company.com</p>
-							<p><i class="fa fa-map-marker"></i> 120 Old Walking Street, GL 16060</p>
+							<p><i class="fa fa-phone"></i> 0700089788</p>
+							<p><i class="fa fa-envelope-o"></i> sirfrankline99@gmail.com</p>
+							<p><i class="fa fa-map-marker"></i>Nairobi Westgate 5th street</p>
 						</address>
 					</div>
 					<div class="col-lg-6 col-md-6 col-xs-10 wow fadeInUp" data-wow-delay="0.6s">
@@ -224,9 +224,9 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12 wow fadeIn" data-wow-delay="0.9s">
-						<p>Copyright &copy; 2018 Lavish Personal Profile 
+						<p>Copyright &copy; 2022 RanKing Personal Profile 
                         
-                        . Designed by <a rel="nofollow noopener" href="https://templatemo.com">templatemo</a></p>
+                        . Designed by <a rel="nofollow noopener" href="https://rrankyy.github.io">rrankyy</a></p>
 						<hr>
 						<ul class="social-icon">
 							<li><a href="#" class="fa fa-facebook"></a></li>
