--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 				</div>
 				<div class="col-md-4 col-xs-6 wow fadeIn" data-wow-delay="0.6s">
 					<div class="portfolio-thumb">
-						<img src="images/portfolio-img1.jpg" class="img-responsive" alt="portfolio img">
+						<img src="images/portfolio-img1.png" class="img-responsive" alt="portfolio img">
 							<div class="portfolio-overlay">
 								<h4>Web Design</h4>
 								<h5>Author: Sir Franklin</h5>
@@ -154,34 +154,16 @@
 				</div>
 				<div class="col-md-4 col-xs-6 wow fadeIn" data-wow-delay="0.6s">
 					<div class="portfolio-thumb">
-						<img src="images/portfolio-img2.jpg" class="img-responsive" alt="portfolio img">
+						<img src="images/portfolio-img2.png" class="img-responsive" alt="portfolio img">
 							<div class="portfolio-overlay">
 								<h4>Web App</h4>
 								<h5>Author: Sir Frankline</h5>
 							</div>
 					</div>
 				</div>
-				<div class="col-md-4 col-xs-6 wow fadeIn" data-wow-delay="0.6s">
-					<div class="portfolio-thumb">
-						<img src="images/portfolio-img3.jpg" class="img-responsive" alt="portfolio img">
-							<div class="portfolio-overlay">
-								<h4>Mobile App</h4>
-								<h5>Author: RanKing</h5>
-							</div>
-					</div>
-				</div>
 				<div class="col-md-6 col-xs-6 wow fadeIn" data-wow-delay="0.6s">
 					<div class="portfolio-thumb">
-						<img src="images/portfolio-img4.jpg" class="img-responsive" alt="portfolio img">
-							<div class="portfolio-overlay">
-								<h4>Old Artwork</h4>
-								<h5>Author: RanKing</h5>
-							</div>
-					</div>
-				</div>
-				<div class="col-md-6 col-xs-6 wow fadeIn" data-wow-delay="0.6s">
-					<div class="portfolio-thumb">
-						<img src="images/portfolio-img5.jpg" class="img-responsive" alt="portfolio img">
+						<img src="images/portfolio-img3.png" class="img-responsive" alt="portfolio img">
 							<div class="portfolio-overlay">
 								<h4>New Animation</h4>
 								<h5>Author: Rrankyy</h5>
